# bytemap

./: .gitignore  README.md  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  package-lock.json  package.json
.omx/plans/: rust-grpc-cutover.md
helper/: Package.swift
helper/Resources/: com.niharturumella.bytemap.helper.plist
helper/Sources/BytemapHelper/: main.swift
helper/Sources/BytemapHelperCtl/: main.swift
helper/scripts/: build.sh
native/: Cargo.toml  build.rs  package.json
native/src/: breakdown.rs  cache.rs  hash.rs  lib.rs  main.rs  walk.rs
proto/: bytemap.proto
scripts/: build-agent-backend.mjs
src/main/: actions.ts  agentBackendServer.ts  agentCredentialStore.ts  agentGrpcClient.ts  agentGrpcProtocol.ts  bytemapAgent.ts  bytemapAgentPrompt.ts  bytemapAgentSkills.ts  diskWatch.ts  index.ts  native.ts  ompBackendProviderAuth.ts  privilegedHelper.ts  scanner.ts  scannerGrpcClient.ts  scannerGrpcProtocol.ts  volumeStats.ts
src/main/scanners/: appLeftovers.ts  caches.ts  docker.ts  duplicates.ts  index.ts  largeFiles.ts  oldDownloads.ts  unusedApps.ts  usageDb.ts  utils.ts
src/preload/: index.d.ts  index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx
src/renderer/src/assets/: main.css
src/renderer/src/components/: AgentChatWidget.tsx  ConfirmModal.tsx  DeletingScreen.tsx  DiskUsageScreen.tsx  DoneScreen.tsx  FullDiskAccessBanner.tsx  HelperInstallModal.tsx  IntroScreen.tsx  (+9 more)
src/shared/: agentToolDisplay.ts  cleanupTargets.ts  format.ts  types.ts
tests/: agent-contracts.test.mjs  agent-tool-display.test.ts
(+6 files in other folders)
