[package]
name = "scanner-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
blake3 = "1.8.5"
napi = { version = "3.4.0", features = ["napi9", "async"] }
napi-derive = "3.3.0"
rayon = "1.12.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
